# RememberMe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/remember_me/: aggregator.py  cache.py  claude_cli.py  cli.py  discovery.py  distributor.py  extractor.py  git_hook.py  interview.py  metrics.py  renderer.py  repo_meta.py  scanner.py
tests/: test_aggregator.py  test_cache.py  test_discovery.py  test_interview.py  test_metrics.py  test_renderer.py  test_scanner.py
