[project]
name = "remember-me"
version = "0.1.0"
description = "Extract your personal coding style into a profile that AI coding tools can read."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
remember-me = "remember_me.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remember_me"]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
